# gaarc

./: README.md  pyproject.toml  requirements.in  requirements.txt
gaarc/data/: arc_data_models.py  augmentation.py  data_interface.py  data_preprocessing.py  preprocessing.py  transformations.py
gaarc/model/: autoencoder.py  secondary_task_modules.py  task_solver.py  unet.py
gaarc/visualization/: arc_visualization.py
