[tool.poetry]
name = "gaarc"
version = "0.1.0"
description = "Functionality to deal with ARC in a generalist manner."
authors = ["Varnez <varnez.ai@gmail.com>"]
license = "GNU GLP3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.26.4,<1.27.0"
matplotlib = ">=3.9.0,<3.10.0"
opencv-python = ">=4.9.0.80,<4.10.0.0"
pytorch-lightning = ">=2.2.5,<2.3.0"
segmentation-models-pytorch = ">=0.3.3,<0.4.0"
torch = ">=2.2.2,<2.3.0"
xxhash = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
